taskType as TreeProperty for FF finished